# llmtrace

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml
src/llmtrace/: __init__.py  __main__.py  backends.py  core.py  gui.py
tests/: test_llmtrace.py
