[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llmtrace"
version = "0.2.0"
description = "Lightweight LLM call tracing and span collection"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Vaibhav Deshmukh", email = "vdeshmukh203@gmail.com"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
llmtrace-viewer = "llmtrace.gui:launch_viewer"

[tool.setuptools.packages.find]
where = ["src"]
